updated to 1.19.3 with version 3.2