@@ -1,14 +1,12 @@
 package net.luis.xbackpack.world.inventory.modifier;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 import com.google.common.collect.Lists;
-
 import net.minecraft.ChatFormatting;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.world.item.TooltipFlag;
+
+import java.util.List;
 
 /**
  *
@@ -32,9 +30,7 @@ public interface ItemModifier {
 			if (!info.isEmpty()) {
 				List<Component> tooltip = Lists.newArrayList();
 				tooltip.add(this.getDisplayName().withStyle(ChatFormatting.WHITE));
-				tooltip.addAll(info.stream().map((component) -> {
-					return component.withStyle(ChatFormatting.GRAY);
-				}).collect(Collectors.toList()));
+				tooltip.addAll(info.stream().map((component) -> component.withStyle(ChatFormatting.GRAY)).toList());
 				return tooltip;
 			}
 		}
